filesystem responsive overlap fix

--- a/app/assets/stylesheets/dcv/filesystem.css.scss
+++ b/app/assets/stylesheets/dcv/filesystem.css.scss
@@ -62,7 +62,7 @@ only screen and (max-width: 760px),
         /* Top/left values mimic padding */
         top: 6px;
         left: 6px;
-        width: 45%;
+        width: 28%;
         padding-right: 10px;
         white-space: nowrap;
     }
